--- a/my-project/package.json
+++ b/my-project/package.json
@@ -35,7 +35,10 @@
   
   "compilerOptions": {
     "typeRoots": ["./node_modules/@types", "./src/types"]
-  }
+  },
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ]
 
 
 }
